# devinterp

./: jupyter_notebook_ibex.slurm  pyproject.toml
dcgm/jupyter/39503084/: dcgm-gpu-stats-gpu101-16-r-39503084.out
dcgm/jupyter/39518945/: dcgm-gpu-stats-dgpu501-14-39518945.out
dcgm/jupyter/39541253/: dcgm-gpu-stats-gpu609-03-39541253.out
dcgm/myenv/39503054/: dcgm-gpu-stats-gpu101-16-r-39503054.out
examples/: diagnostics.ipynb  dlns.ipynb  grokking.ipynb  introduction.ipynb  mnist.ipynb  normal_crossing.ipynb  sgld_calibration.ipynb  tms.ipynb
logs/slurm/: jupyter_39624069.err  jupyter_39624069.out
src/devinterp/: __init__.py  utils.py  vis_utils.py
src/devinterp/backends/default/slt/: sampler.py
src/devinterp/backends/tpu/slt/: sampler.py
src/devinterp/optim/: __init__.py  prior.py  sgld.py  sgmcmc.py
src/devinterp/slt/: cov.py  gradient.py  llc.py  sampler.py
tests/: conftest.py  models.json
tests/integration/: test_back_comp.py  test_gpu.py  test_multiprocessing.py  test_sampling.py  test_tpu.py  test_vis_utils.py
tests/optim/: rllc_test.py  sgld_test.py  test_preconditioner.py  test_prior.py  test_sgmcmc.py
tests/optim/__snapshots__/: rllc_test.ambr  test_sgmcmc.ambr
tests/slt/: cov_test.py  mala_test.py  rrr_test.py  sampler_accuracy_test.py  sampler_ordinality_test.py  sampler_test.py  test_llc_nan.py
tests/slt/__snapshots__/: rrr_test.ambr  sampler_ordinality_test.ambr
