[build-system]
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "devinterp"
version = "1.3.2"
description = "A library for doing research on developmental interpretability"
# license = "LICENSE"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
docs = ["sphinx", "sphinx-math-dollar", "sphinx-rtd-theme", "sphinx-autobuild", "myst_parser"]
vis = ["plotly>=5.20.0"]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "transformers",
    "datasets",
    "transformer_lens",
    "syrupy"
]


[project.urls]
"Homepage" = "https://github.com/timaeus-research/devinterp"
"Bug Tracker" = "https://github.com/timaeus-research/devinterp/issues"

[tool.pyright]
venv = "../../.venv"
venvPath = "."
